<package>
	<name>lx_camera_ros</name>
	<version>1.1.1</version>
	<description>Lx camera sdk of ros</description>
	<maintainer email="cjwu@lanxincn.com">Mier</maintainer>
	<license>MIT</license>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>roscpp</build_depend>
	<build_depend>sensor_msgs</build_depend>

	<run_depend>roscpp</run_depend>
	<run_depend>sensor_msgs</run_depend>
</package>
