<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
	<name>lx_camera_ros2</name>
	<version>1.0.0</version>
	<description>Lx camera sdk of ros2</description>
	<maintainer email="cjwu@lanxincn.com">Mier</maintainer>
	<license>MIT</license>

	<buildtool_depend>ament_cmake</buildtool_depend>
	<exec_depend>rclcpp</exec_depend>
	<exec_depend>std_msgs</exec_depend>
	<exec_depend>sensor_msgs</exec_depend>
	<exec_depend>image_transport</exec_depend>
	<exec_depend>cv_bridge</exec_depend>

<export>
	<build_type>ament_cmake</build_type>
</export>
</package>


