<package>
	<name>lx_camera_ros</name>
	<version>1.0.0</version>
	<description>Lx camera sdk of ros</description>
	<maintainer email="cjwu@lanxincn.com">Mier</maintainer>
	<license>MIT</license>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>roscpp</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>nav_msgs</build_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_depend>cv_bridge</build_depend>
	<build_depend>tf</build_depend>


	<run_depend>roscpp</run_depend>
	<run_depend>sensor_msgs</run_depend>
	<run_depend>nav_msgs</run_depend>
	<run_depend>cv_bridge</run_depend>
	<run_depend>geometry_msgs</run_depend>
	<run_depend>tf</run_depend>
	
	<build_depend>message_generation</build_depend>
 	<run_depend>message_runtime</run_depend>
</package>
